--- a/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
@@ -15,137 +15,110 @@
     .Paper:last-child {
       margin-bottom: 0;
     }
-    
-        /* Styles */
-        
-            p.Normal {
-            }
-        
-            p. {
-            }
-        
-            p. {
-            }
-        
-            p. {
-            }
-        
-            p. {
-            }
-        
-            p. {
-            }
-        
-            p. {
-            }
-        
-            p. {
-            }
-        
-
-        /* Paragraph attributes */
-        
-            .parashape-0 {
-                margin:
-                    0pt
-                    0pt
-                    0pt
-                    0pt;
-                
-        text-align: justify;
-    
-        text-indent: 0pt
-    ;
-        min-height: 1.6em;
-            }
-            .parashape-0 > span {
-            
-                line-height: 1.6;
-                
-            }
-        
-            .parashape-1 {
-                margin:
-                    0pt
-                    0pt
-                    0pt
-                    0pt;
-                
-        text-align: justify;
-    
-        text-indent: 0pt
-    ;
-        min-height: 1.6em;
-            }
-            .parashape-1 > span {
-            
-                line-height: 1.6;
-                
-            }
-        
-
-        /* Text attributes */
-        
-            .charshape-0 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-1 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-2 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-3 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-4 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-5 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-6 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .charshape-7 {
-                /* fontface-ko  */
-                color: #000000;
-                font-size: 10pt;
-                
-            }
-        
-            .borderfill-1 {
-                border-top:  1px solid #000000/* width:0.1mm style: */ ;
-                border-right:  1px solid #000000/* width:0.1mm style: */ ;
-                border-bottom:  1px solid #000000/* width:0.1mm style: */ ;
-                border-left:  1px solid #000000/* width:0.1mm style: */ ;
-            }
-        
+/* Styles */
+p.Normal {
+}
+p. {
+}
+p. {
+}
+p. {
+}
+p. {
+}
+p. {
+}
+p. {
+}
+p. {
+}
+/* Paragraph attributes */
+.parashape-0 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.parashape-0 > span {
+  line-height: 1.6;
+}
+.parashape-1 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.parashape-1 > span {
+  line-height: 1.6;
+}
+/* Text attributes */
+.charshape-0 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 5 8 11 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-1 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 3 8 11 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "Arial", "바탕", "바탕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-2 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 5 8 10 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "고딕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-3 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 1 5 8 11 10 11 12 */
+/* ko en cn jp other symbol user */
+"한컴돋움", "바탕", "바탕", "바탕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-4 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 4 8 11 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "Times New Roman", "바탕", "바탕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-5 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 5 6 11 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "해서 약자", "바탕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-6 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 5 7 11 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "해서 간자", "바탕", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.charshape-7 {
+  color: #000000;
+  font-family: /* base: 1 3 6 9 10 11 12 */
+/* base + offset: 2 5 8 9 10 11 12 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "명조", "고딕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.borderfill-1 {
+  border-top: 1px solid #000000/*0.1mm none*/;
+  border-right: 1px solid #000000/*0.1mm none*/;
+  border-bottom: 1px solid #000000/*0.1mm none*/;
+  border-left: 1px solid #000000/*0.1mm none*/;
+}
