xsl/html: line-height as number (instead of length)

--- a/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
@@ -60,7 +60,7 @@
             }
             .parashape-0 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -79,7 +79,7 @@
             }
             .parashape-1 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
