--- a/pyhwp-tests/hwp5_tests/fixtures/charstyle.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/charstyle.html.d/styles.css
@@ -78,7 +78,7 @@
             }
             .parashape-0 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -97,7 +97,7 @@
             }
             .parashape-1 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -116,7 +116,7 @@
             }
             .parashape-2 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -135,7 +135,7 @@
             }
             .parashape-3 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -154,7 +154,7 @@
             }
             .parashape-4 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -173,7 +173,7 @@
             }
             .parashape-5 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -192,7 +192,7 @@
             }
             .parashape-6 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -211,7 +211,7 @@
             }
             .parashape-7 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -230,7 +230,7 @@
             }
             .parashape-8 > span {
             
-                line-height: 150%;
+                line-height: 1.5;
                 
             }
         
@@ -249,7 +249,7 @@
             }
             .parashape-9 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -270,7 +270,7 @@
             }
             .parashape-10 > span {
             
-                line-height: 130%;
+                line-height: 1.3;
                 
             }
         
@@ -289,7 +289,7 @@
             }
             .parashape-11 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
