--- a/pyhwp-tests/hwp5_tests/fixtures/facename.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename.html.d/styles.css
@@ -75,7 +75,7 @@
             }
             .parashape-0 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -94,7 +94,7 @@
             }
             .parashape-1 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -113,7 +113,7 @@
             }
             .parashape-2 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -132,7 +132,7 @@
             }
             .parashape-3 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -151,7 +151,7 @@
             }
             .parashape-4 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -170,7 +170,7 @@
             }
             .parashape-5 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -189,7 +189,7 @@
             }
             .parashape-6 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -208,7 +208,7 @@
             }
             .parashape-7 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -227,7 +227,7 @@
             }
             .parashape-8 > span {
             
-                line-height: 150%;
+                line-height: 1.5;
                 
             }
         
@@ -246,7 +246,7 @@
             }
             .parashape-9 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -267,7 +267,7 @@
             }
             .parashape-10 > span {
             
-                line-height: 130%;
+                line-height: 1.3;
                 
             }
         
@@ -286,7 +286,7 @@
             }
             .parashape-11 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
