--- a/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/styles.css
@@ -80,7 +80,7 @@
             }
             .parashape-0 > span {
             
-                line-height: 130%;
+                line-height: 1.3;
                 
             }
         
@@ -99,7 +99,7 @@
             }
             .parashape-1 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -118,7 +118,7 @@
             }
             .parashape-2 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -137,7 +137,7 @@
             }
             .parashape-3 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -156,7 +156,7 @@
             }
             .parashape-4 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -175,7 +175,7 @@
             }
             .parashape-5 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -194,7 +194,7 @@
             }
             .parashape-6 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -213,7 +213,7 @@
             }
             .parashape-7 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -232,7 +232,7 @@
             }
             .parashape-8 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -251,7 +251,7 @@
             }
             .parashape-9 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -270,7 +270,7 @@
             }
             .parashape-10 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -289,7 +289,7 @@
             }
             .parashape-11 > span {
             
-                line-height: 150%;
+                line-height: 1.5;
                 
             }
         
@@ -308,7 +308,7 @@
             }
             .parashape-12 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -327,7 +327,7 @@
             }
             .parashape-13 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -346,7 +346,7 @@
             }
             .parashape-14 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -365,7 +365,7 @@
             }
             .parashape-15 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -384,7 +384,7 @@
             }
             .parashape-16 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -403,7 +403,7 @@
             }
             .parashape-17 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
@@ -422,7 +422,7 @@
             }
             .parashape-18 > span {
             
-                line-height: 160%;
+                line-height: 1.6;
                 
             }
         
