--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/styles.css
@@ -304,4 +304,7 @@ p.Memo {
   border-right: 2px solid #000000;
   border-bottom: 1px solid #000000;
   border-left: 1px solid #000000;
+  background-image: linear-gradient(0deg,#3f3f3f,#7f7f7f);
+  background-image: -webkit-linear-gradient(0deg,#3f3f3f,#7f7f7f);
+  background-image: -moz-linear-gradient(0deg,#3f3f3f,#7f7f7f);
 }
