xsl/html: BorderFill.border width/style

--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/styles.css
@@ -267,38 +267,38 @@ p.Memo {
   font-style: italic;
 }
 .borderfill-1 {
-  border-top: 1px solid #000000/*0.12mm solid*/;
-  border-right: 1px solid #000000/*0.12mm solid*/;
-  border-bottom: 1px solid #000000/*0.12mm solid*/;
-  border-left: 1px solid #000000/*0.12mm solid*/;
+  border-top: 1px solid #000000;
+  border-right: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  border-left: 1px solid #000000;
 }
 .borderfill-2 {
-  border-top: 1px solid #000000/*0.1mm none*/;
-  border-right: 1px solid #000000/*0.1mm none*/;
-  border-bottom: 1px solid #000000/*0.1mm none*/;
-  border-left: 1px solid #000000/*0.1mm none*/;
+  border-top: 1px none #000000;
+  border-right: 1px none #000000;
+  border-bottom: 1px none #000000;
+  border-left: 1px none #000000;
 }
 .borderfill-3 {
-  border-top: 1px solid #000000/*0.12mm solid*/;
-  border-right: 1px solid #000000/*0.12mm solid*/;
-  border-bottom: 1px solid #000000/*0.4mm solid*/;
-  border-left: 1px solid #000000/*0.12mm solid*/;
+  border-top: 1px solid #000000;
+  border-right: 1px solid #000000;
+  border-bottom: 2px solid #000000;
+  border-left: 1px solid #000000;
 }
 .borderfill-4 {
-  border-top: 1px solid #0000ff/*0.12mm dashed*/;
-  border-right: 1px solid #000000/*0.12mm solid*/;
-  border-bottom: 1px solid #000000/*0.12mm solid*/;
-  border-left: 1px solid #000000/*0.12mm solid*/;
+  border-top: 1px dashed #0000ff;
+  border-right: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  border-left: 1px solid #000000;
 }
 .borderfill-5 {
-  border-top: 1px solid #000000/*0.4mm solid*/;
-  border-right: 1px solid #000000/*0.4mm solid*/;
-  border-bottom: 1px solid #000000/*0.4mm solid*/;
-  border-left: 1px solid #000000/*0.4mm solid*/;
+  border-top: 2px solid #000000;
+  border-right: 2px solid #000000;
+  border-bottom: 2px solid #000000;
+  border-left: 2px solid #000000;
 }
 .borderfill-6 {
-  border-top: 1px solid #000000/*0.12mm solid*/;
-  border-right: 1px solid #000000/*0.4mm solid*/;
-  border-bottom: 1px solid #000000/*0.12mm solid*/;
-  border-left: 1px solid #000000/*0.12mm solid*/;
+  border-top: 1px solid #000000;
+  border-right: 2px solid #000000;
+  border-bottom: 1px solid #000000;
+  border-left: 1px solid #000000;
 }
