--- a/pyhwp-tests/hwp5_tests/fixtures/underline-styles.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/underline-styles.html.d/styles.css
@@ -359,8 +359,8 @@ p.Memo {
   -webkit-text-decoration-style: double;
 }
 .borderfill-1 {
-  border-top: 1px solid #000000/*0.1mm none*/;
-  border-right: 1px solid #000000/*0.1mm none*/;
-  border-bottom: 1px solid #000000/*0.1mm none*/;
-  border-left: 1px solid #000000/*0.1mm none*/;
+  border-top: 1px none #000000;
+  border-right: 1px none #000000;
+  border-bottom: 1px none #000000;
+  border-left: 1px none #000000;
 }
