--- a/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
@@ -121,4 +121,5 @@ p. {
   border-right: 1px none #000000;
   border-bottom: 1px none #000000;
   border-left: 1px none #000000;
+  background-color: #ffffff;
 }
