--- a/pyhwp-tests/hwp5_tests/fixtures/borderfill.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/borderfill.html.d/styles.css
@@ -200,6 +200,7 @@ p.Memo {
   border-right: 1px none #000000;
   border-bottom: 1px none #000000;
   border-left: 1px none #000000;
+  background-color: #ffffff;
 }
 .borderfill-2 {
   border-top: 1px solid #000000;
@@ -212,6 +213,7 @@ p.Memo {
   border-right: 1px solid #000000;
   border-bottom: 1px solid #000000;
   border-left: 1px solid #000000;
+  background-color: #3f7fff;
 }
 .borderfill-4 {
   border-top: 1px solid #000000;
@@ -230,6 +232,7 @@ p.Memo {
   border-right: 1px solid #000000;
   border-bottom: 1px solid #000000;
   border-left: 1px solid #000000;
+  background-color: #3f7fff;
 }
 .borderfill-7 {
   border-top: 1px solid #000000;
