--- a/pyhwp-tests/hwp5_tests/fixtures/shapecontainer-2.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapecontainer-2.html.d/styles.css
@@ -217,10 +217,12 @@ p.Memo {
   border-right: 1px none #000000;
   border-bottom: 1px none #000000;
   border-left: 1px none #000000;
+  background-color: #ffffff;
 }
 .borderfill-2 {
   border-top: 1px none #000000;
   border-right: 1px none #000000;
   border-bottom: 1px none #000000;
   border-left: 1px none #000000;
+  background-color: #ffffff;
 }
