--- a/pyhwp-tests/hwp5_tests/fixtures/shapeline.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapeline.html.d/styles.css
@@ -200,4 +200,5 @@ p.Memo {
   border-right: 1px none #000000;
   border-bottom: 1px none #000000;
   border-left: 1px none #000000;
+  background-color: #ffffff;
 }
