xsl/html: Paragraph min-height (for empty paragraphs)

--- a/pyhwp-tests/hwp5_tests/fixtures/charstyle.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/charstyle.html.d/styles.css
@@ -74,7 +74,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-0 > span {
             
@@ -93,7 +93,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-1 > span {
             
@@ -112,7 +112,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-2 > span {
             
@@ -131,7 +131,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-3 > span {
             
@@ -150,7 +150,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-4 > span {
             
@@ -169,7 +169,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-5 > span {
             
@@ -188,7 +188,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-6 > span {
             
@@ -207,7 +207,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-7 > span {
             
@@ -226,7 +226,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.5em;
             }
             .parashape-8 > span {
             
@@ -245,7 +245,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-9 > span {
             
@@ -266,7 +266,7 @@
     ;
         
         padding-left: 13.1pt;
-        
+        min-height: 1.3em;
             }
             .parashape-10 > span {
             
@@ -285,7 +285,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-11 > span {
             
