--- a/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
@@ -56,7 +56,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-0 > span {
             
@@ -75,7 +75,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-1 > span {
             
