--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/styles.css
@@ -71,7 +71,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-0 > span {
             
@@ -90,7 +90,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-1 > span {
             
@@ -109,7 +109,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-2 > span {
             
@@ -128,7 +128,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-3 > span {
             
@@ -147,7 +147,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-4 > span {
             
@@ -166,7 +166,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-5 > span {
             
@@ -185,7 +185,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-6 > span {
             
@@ -204,7 +204,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-7 > span {
             
@@ -223,7 +223,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.5em;
             }
             .parashape-8 > span {
             
@@ -242,7 +242,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-9 > span {
             
@@ -263,7 +263,7 @@
     ;
         
         padding-left: 13.1pt;
-        
+        min-height: 1.3em;
             }
             .parashape-10 > span {
             
@@ -282,7 +282,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-11 > span {
             
