--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/styles.css
@@ -74,7 +74,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-0 > span {
             
@@ -95,7 +95,7 @@
     ;
         
         padding-left: 13.1pt;
-        
+        min-height: 1.3em;
             }
             .parashape-1 > span {
             
@@ -114,7 +114,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-2 > span {
             
@@ -133,7 +133,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-3 > span {
             
@@ -152,7 +152,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-4 > span {
             
@@ -171,7 +171,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-5 > span {
             
@@ -190,7 +190,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-6 > span {
             
@@ -209,7 +209,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-7 > span {
             
@@ -228,7 +228,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-8 > span {
             
@@ -247,7 +247,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-9 > span {
             
@@ -266,7 +266,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.5em;
             }
             .parashape-10 > span {
             
@@ -285,7 +285,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.5em;
             }
             .parashape-11 > span {
             
@@ -306,7 +306,7 @@
     ;
         
         padding-left: 13.1pt;
-        
+        min-height: 1.3em;
             }
             .parashape-12 > span {
             
@@ -325,7 +325,7 @@
     
         text-indent: 0pt
     ;
-        
+        min-height: 1.6em;
             }
             .parashape-13 > span {
             
@@ -344,7 +344,7 @@
     
         text-indent: 10pt
     ;
-        
+        min-height: 1.3em;
             }
             .parashape-14 > span {
             
