--- a/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/styles.css
@@ -25,146 +25,330 @@ body {
 .Normal > span {
   line-height: 1.6;
 }
-.Normal > span {
 /* @charshape-id = 0*/
+.Normal > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+.Normal > span.lang-ko {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
-. {
+.Normal > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.kohkdu {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.kohkdu > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 3*/
+.kohkdu > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 1 5 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"한컴돋움", "바탕", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+.kohkdu > span.lang-ko {
+  font-family: "한컴돋움", sans-serif;
   font-size: 10pt;
 }
-. {
+.kohkdu > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.kohkdu > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.kohkdu > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.kohkdu > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.kohkdu > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.kohkdu > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.entnr {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.entnr > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 4*/
+.entnr > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 4 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "Times New Roman", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+.entnr > span.lang-ko {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
-. {
+.entnr > span.lang-en {
+  font-family: "Times New Roman", serif;
+  font-size: 10pt;
+}
+.entnr > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.entnr > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.entnr > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.entnr > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.entnr > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.enarial {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.enarial > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 1*/
+.enarial > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 3 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "Arial", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+.enarial > span.lang-ko {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
-. {
+.enarial > span.lang-en {
+  font-family: "Arial", sans-serif;
+  font-size: 10pt;
+}
+.enarial > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.enarial > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.enarial > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.enarial > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.enarial > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cnyak {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.cnyak > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 5*/
+.cnyak > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 6 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "해서 약자", "바탕", "고딕", "바탕", "바탕";
+}
+.cnyak > span.lang-ko {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
-. {
+.cnyak > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cnyak > span.lang-cn {
+  font-family: "해서 약자";
+  font-size: 10pt;
+}
+.cnyak > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cnyak > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cnyak > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cnyak > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cngan {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.cngan > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 6*/
+.cngan > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 7 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "해서 간자", "바탕", "고딕", "바탕", "바탕";
+}
+.cngan > span.lang-ko {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
-. {
+.cngan > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cngan > span.lang-cn {
+  font-family: "해서 간자";
+  font-size: 10pt;
+}
+.cngan > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cngan > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cngan > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.cngan > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpmincho {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.jpmincho > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 7*/
+.jpmincho > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 8 9 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "명조", "고딕", "바탕", "바탕";
+}
+.jpmincho > span.lang-ko {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
-. {
+.jpmincho > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpmincho > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpmincho > span.lang-jp {
+  font-family: "명조", serif;
+  font-size: 10pt;
+}
+.jpmincho > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpmincho > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpmincho > span.lang-user {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpgothic {
 /* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-. > span {
+.jpgothic > span {
   line-height: 1.6;
 }
-. > span {
 /* @charshape-id = 2*/
+.jpgothic > span {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 8 10 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "고딕", "고딕", "바탕", "바탕";
+}
+.jpgothic > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpgothic > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpgothic > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpgothic > span.lang-jp {
+  font-family: "고딕", sans-serif;
+  font-size: 10pt;
+}
+.jpgothic > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpgothic > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.jpgothic > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 /* Paragraph attributes */
@@ -189,66 +373,250 @@ p.parashape-1 > span {
 /* Text attributes */
 span.charshape-0 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+span.charshape-0.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-1 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 3 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "Arial", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+span.charshape-1.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-en {
+  font-family: "Arial", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-2 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 8 10 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "고딕", "고딕", "바탕", "바탕";
+}
+span.charshape-2.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-2.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-2.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-2.lang-jp {
+  font-family: "고딕", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-2.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-2.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-2.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-3 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 1 5 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"한컴돋움", "바탕", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+span.charshape-3.lang-ko {
+  font-family: "한컴돋움", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-3.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-3.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-3.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-3.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-3.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-3.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-4 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 4 8 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "Times New Roman", "바탕", "바탕", "고딕", "바탕", "바탕";
+}
+span.charshape-4.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-4.lang-en {
+  font-family: "Times New Roman", serif;
+  font-size: 10pt;
+}
+span.charshape-4.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-4.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-4.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-4.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-4.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-5 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 6 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "해서 약자", "바탕", "고딕", "바탕", "바탕";
+}
+span.charshape-5.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-5.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-5.lang-cn {
+  font-family: "해서 약자";
+  font-size: 10pt;
+}
+span.charshape-5.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-5.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-5.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-5.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-6 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 7 11 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "해서 간자", "바탕", "고딕", "바탕", "바탕";
+}
+span.charshape-6.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-6.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-6.lang-cn {
+  font-family: "해서 간자";
+  font-size: 10pt;
+}
+span.charshape-6.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-6.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-6.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-6.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-7 {
   color: #000000;
-  font-family: /* base: 1 3 6 9 10 11 12 */
-/* base + offset: 2 5 8 9 10 11 12 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "명조", "고딕", "바탕", "바탕";
+}
+span.charshape-7.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-7.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-7.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-7.lang-jp {
+  font-family: "명조", serif;
+  font-size: 10pt;
+}
+span.charshape-7.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-7.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-7.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .borderfill-1 {
