--- a/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/styles.css
@@ -25,13 +25,36 @@ body {
 .Normal > span {
   line-height: 1.6;
 }
-.Normal > span {
 /* @charshape-id = 1*/
+.Normal > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Normal > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Normal > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Body {
@@ -44,13 +67,36 @@ body {
 .Body > span {
   line-height: 1.6;
 }
-.Body > span {
 /* @charshape-id = 1*/
+.Body > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Body > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Body > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Body > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Body > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Body > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Body > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Body > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-1 {
@@ -63,13 +109,36 @@ body {
 .Outline-1 > span {
   line-height: 1.6;
 }
-.Outline-1 > span {
 /* @charshape-id = 1*/
+.Outline-1 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-1 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-1 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-1 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-1 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-1 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-1 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-1 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-2 {
@@ -82,13 +151,36 @@ body {
 .Outline-2 > span {
   line-height: 1.6;
 }
-.Outline-2 > span {
 /* @charshape-id = 1*/
+.Outline-2 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-2 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-2 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-2 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-2 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-2 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-2 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-2 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-3 {
@@ -101,13 +193,36 @@ body {
 .Outline-3 > span {
   line-height: 1.6;
 }
-.Outline-3 > span {
 /* @charshape-id = 1*/
+.Outline-3 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-3 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-3 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-3 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-3 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-3 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-3 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-3 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-4 {
@@ -120,13 +235,36 @@ body {
 .Outline-4 > span {
   line-height: 1.6;
 }
-.Outline-4 > span {
 /* @charshape-id = 1*/
+.Outline-4 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-4 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-4 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-4 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-4 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-4 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-4 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-4 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-5 {
@@ -139,13 +277,36 @@ body {
 .Outline-5 > span {
   line-height: 1.6;
 }
-.Outline-5 > span {
 /* @charshape-id = 1*/
+.Outline-5 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-5 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-5 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-5 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-5 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-5 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-5 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-5 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-6 {
@@ -158,13 +319,36 @@ body {
 .Outline-6 > span {
   line-height: 1.6;
 }
-.Outline-6 > span {
 /* @charshape-id = 1*/
+.Outline-6 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-6 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-6 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-6 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-6 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-6 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-6 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-6 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Outline-7 {
@@ -177,13 +361,36 @@ body {
 .Outline-7 > span {
   line-height: 1.6;
 }
-.Outline-7 > span {
 /* @charshape-id = 1*/
+.Outline-7 > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Outline-7 > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-7 > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-7 > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-7 > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-7 > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-7 > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+.Outline-7 > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 .Page-Number {
@@ -196,13 +403,36 @@ body {
 .Page-Number > span {
   line-height: 1.6;
 }
-.Page-Number > span {
 /* @charshape-id = 0*/
+.Page-Number > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+}
+.Page-Number > span.lang-ko {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+.Page-Number > span.lang-en {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+.Page-Number > span.lang-cn {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+.Page-Number > span.lang-jp {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+.Page-Number > span.lang-other {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+.Page-Number > span.lang-symbol {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+.Page-Number > span.lang-user {
+  font-family: "굴림", sans-serif;
   font-size: 10pt;
 }
 .Header {
@@ -215,13 +445,36 @@ body {
 .Header > span {
   line-height: 1.5;
 }
-.Header > span {
 /* @charshape-id = 2*/
+.Header > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+}
+.Header > span.lang-ko {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Header > span.lang-en {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Header > span.lang-cn {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Header > span.lang-jp {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Header > span.lang-other {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Header > span.lang-symbol {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Header > span.lang-user {
+  font-family: "굴림", sans-serif;
   font-size: 9pt;
 }
 .Footnote {
@@ -235,13 +488,36 @@ body {
 .Footnote > span {
   line-height: 1.3;
 }
-.Footnote > span {
 /* @charshape-id = 3*/
+.Footnote > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Footnote > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Footnote > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Footnote > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Footnote > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Footnote > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Footnote > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Footnote > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 9pt;
 }
 .Endnote {
@@ -255,13 +531,36 @@ body {
 .Endnote > span {
   line-height: 1.3;
 }
-.Endnote > span {
 /* @charshape-id = 3*/
+.Endnote > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+.Endnote > span.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Endnote > span.lang-en {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Endnote > span.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Endnote > span.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Endnote > span.lang-other {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Endnote > span.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+.Endnote > span.lang-user {
+  font-family: "바탕", serif;
   font-size: 9pt;
 }
 .Memo {
@@ -274,13 +573,36 @@ body {
 .Memo > span {
   line-height: 1.6;
 }
-.Memo > span {
 /* @charshape-id = 4*/
+.Memo > span {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+}
+.Memo > span.lang-ko {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Memo > span.lang-en {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Memo > span.lang-cn {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Memo > span.lang-jp {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Memo > span.lang-other {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Memo > span.lang-symbol {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+.Memo > span.lang-user {
+  font-family: "굴림", sans-serif;
   font-size: 9pt;
 }
 /* Paragraph attributes */
@@ -459,42 +781,157 @@ p.parashape-18 > span {
 /* Text attributes */
 span.charshape-0 {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+}
+span.charshape-0.lang-ko {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-en {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-cn {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-jp {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-other {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-symbol {
+  font-family: "굴림", sans-serif;
+  font-size: 10pt;
+}
+span.charshape-0.lang-user {
+  font-family: "굴림", sans-serif;
   font-size: 10pt;
 }
 span.charshape-1 {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+span.charshape-1.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-en {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-other {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 10pt;
+}
+span.charshape-1.lang-user {
+  font-family: "바탕", serif;
   font-size: 10pt;
 }
 span.charshape-2 {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+}
+span.charshape-2.lang-ko {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-2.lang-en {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-2.lang-cn {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-2.lang-jp {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-2.lang-other {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-2.lang-symbol {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-2.lang-user {
+  font-family: "굴림", sans-serif;
   font-size: 9pt;
 }
 span.charshape-3 {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 2 4 6 8 10 12 14 */
-/* ko en cn jp other symbol user */
-"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+}
+span.charshape-3.lang-ko {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+span.charshape-3.lang-en {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+span.charshape-3.lang-cn {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+span.charshape-3.lang-jp {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+span.charshape-3.lang-other {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+span.charshape-3.lang-symbol {
+  font-family: "바탕", serif;
+  font-size: 9pt;
+}
+span.charshape-3.lang-user {
+  font-family: "바탕", serif;
   font-size: 9pt;
 }
 span.charshape-4 {
   color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+}
+span.charshape-4.lang-ko {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-4.lang-en {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-4.lang-cn {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-4.lang-jp {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-4.lang-other {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-4.lang-symbol {
+  font-family: "굴림", sans-serif;
+  font-size: 9pt;
+}
+span.charshape-4.lang-user {
+  font-family: "굴림", sans-serif;
   font-size: 9pt;
 }
 .borderfill-1 {
